@@ -6,6 +6,9 @@
    - markus@cvs.openbsd.org 2001/04/14 16:17:14
      [channels.c]
      remove some channels that are not appropriate for keepalive.
+   - markus@cvs.openbsd.org 2001/04/14 16:27:57
+     [ssh-add.c]
+     use clear_pass instead of xfree()
 
 20010414
  - Sync with OpenBSD glob.c, strlcat.c and vis.c changes
@@ -5072,4 +5075,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1112 2001/04/14 23:08:36 mouring Exp $
+$Id: ChangeLog,v 1.1113 2001/04/14 23:10:09 mouring Exp $
